<resources>
    <string name="app_name">HSE_MobileProject</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="sign_in_invitation">Войдите или зарегистрируйтесь</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_up_button">Регистрация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="registration_title">Регистрация</string>
    <string name="input_login_title">Введите имя пользователя</string>
    <string name="input_email_title">Введите эл. почту</string>
    <string name="input_password_title">Введите пароль</string>
    <string name="email_hint">Эл. почта</string>
    <string name="enter_login_reg">Прим: anton_antonov</string>
    <string name="enter_email_reg">example@gmail.com</string>
    <string name="enter_password_reg">Последовательность 6 символов</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="news_title">Новости вышки</string>
    <string name="groups_title">Клубы</string>
    <string name="profile_title">Профиль</string>
    <string name="settings_title">Настройки</string>
    <string name="filter_news_title">Фильтр</string>
    <string name="filter_groups_title">Фильтр</string>
    <string name="filter_news_button">Выбрать</string>
    <string name="filter_groups_button">Выбрать</string>
    <string name="news_item_category">Категория</string>
    <string name="groups_item_category">Категория</string>
    <string name="news_item_club">Клуб</string>
    <string name="filter_news_activity_title">Задать фильтры</string>
    <string name="filter_groups_activity_title">Задать фильтры</string>
    <string name="filter_news_by_category">По категории</string>
    <string name="filter_groups_by_category">По категории</string>
    <string name="filter_news_by_club">По клубу</string>
    <string name="cat_event">Мероприятие</string>
    <string name="cat_active">Активный отдых</string>
    <string name="cat_conference">Конференция</string>
    <string name="cat_article">Статья</string>
    <string name="cat_search_helper">Вакансии</string>
    <string name="cat_volunteering">Волонтерство</string>
    <string name="club_tourclub">Турклуб</string>
    <string name="club_hse_ursus">HSE Ursus</string>
    <string name="club_invest_club">Invest Club</string>
    <string name="club_green_hse">Зеленая вышка</string>
    <string name="club_mus_club">МузКлуб</string>
    <string name="club_sport_club">СК ВШЭ</string>
    <string name="apply_filter_button">Применить фильтры</string>
    <string name="news_item_page_title">Страница новости</string>
    <string name="groups_item_page_title">Страница клуба</string>
    <string name="go_to_club_page_button">На страницу клуба</string>
    <string name="post_image">Добавить фото клуба</string>
    <string name="userhandle">Имя пользователя</string>
    <string name="website_description">Ссылка</string>
    <string name="follow_button_description">Подписаться</string>
    <string name="message_button_description">Сообщение</string>
    <string name="tab_layout_description">Панель управления</string>
    <string name="vacancies_tab_description">Вакансии</string>
    <string name="events_tab_description">Мероприятия</string>
    <string name="news_tab_description">Новости</string>
    <string name="view_pager_description">Содержание вкладок</string>
    <string name="settings_item_page_title">Настройки</string>
    <string name="settings_cat_profile_title">Настройки профиля</string>
    <string name="change_password_button">Изменить пароль</string>
    <string name="settings_cat_app_title">Настройки приложения</string>
    <string name="settings_lang_title">Язык</string>
    <string name="change_lang_eng">Сменить язык на английский</string>
    <string name="change_theme">Темная тема</string>
    <string name="change_theme_automatically">Сменять тему автоматически</string>
    <string name="settings_theme_title">Тема</string>
    <string name="change_password_activity_title">Смена пароля</string>
    <string name="old_password_input">Введите текущий пароль</string>
    <string name="new_password_input">Введите новый пароль</string>
    <string name="new_password_repeat_input">Введите пароль снова</string>
    <string name="old_password_input_title">Текущий пароль</string>
    <string name="new_password_input_title">Новый пароль</string>
    <string name="new_password_input_repeat_title">Повторите пароль</string>
    <string name="old_password_input_hint">Введенный пароль должен соответствовать текущему паролю</string>
    <string name="new_password_input_repeat_hint">Введенный пароль должен в точности повторять новый пароль</string>
    <string name="profile_title_about">О себе:</string>
    <string name="profile_my_clubs_button">Мои клубы</string>
    <string name="profile_my_events_button">Я пойду</string>
    <string name="profile_text_placeholder">Здесь пока ничего нет</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="edit_profile_page_title">Редактирование профиля</string>
    <string name="edit_prof_set_name_title">Имя профиля</string>
    <string name="prof_set_name_hint">Имя</string>
    <string name="prof_set_name_text">Введите не более 20 символов</string>
    <string name="edit_profile_set_email_title">Эл. почта</string>
    <string name="prof_set_email_hint">Эл. почта</string>
    <string name="prof_set_email_text">example@gmail.com</string>
    <string name="edit_profile_set_about_title">О себе</string>
    <string name="prof_set_about_text">Введите информацию о себе</string>
    <string name="edit_prof_apply">Применить изменения</string>
    <string name="my_clubs_page_title">Мои клубы</string>
    <string name="my_events_page_title">Я пойду</string>
</resources>