<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/actionBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/edit_profile_page_title"
            app:titleTextAppearance="@style/title_action_bar" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/edit_profile_set_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/title_medium"
        android:background="@drawable/horizontal_divider_bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_prof_set_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileNameInput"
        style="@style/input_text"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_set_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/prof_set_name_hint"
        app:placeholderText="@string/prof_set_name_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filled_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_profile_set_email_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/title_medium"
        android:background="@drawable/horizontal_divider_bottom"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_profile_set_email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmailInput"
        style="@style/input_text"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_set_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/prof_set_email_hint"
        app:placeholderText="@string/prof_set_email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filled_edit_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_profile_set_about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/title_medium"
        android:background="@drawable/horizontal_divider_bottom"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/edit_profile_set_about_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailInput" />

    <EditText
        android:id="@+id/profileAboutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_set_about_title"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/prof_set_about_text"
        android:lines="5"/>

    <Button
        android:id="@+id/apply_changes"
        style="@style/filled_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/edit_prof_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAboutInput" />


</androidx.constraintlayout.widget.ConstraintLayout>